# grayscale-histogram-equalizer

./: CMakeLists.txt  HistogramEqualization.cpp  HistogramEqualization.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/: CMakeLists.txt  HistogramEqualizationTests.cpp
